EC327 - Intro to Software Engineering/errors.txt
errors.cpp: In function ‘int main()’:
errors.cpp:3:1: error: expected initializer before ‘}’ token
 }
 ^
